edit main - clean up